// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`profiling charts flamegraph chart should contain valid data: 0: CommitTree 1`] = `
OBJECT {
  "nodes": Map {
    1 => OBJECT {
      "children": ARRAY [
        2,
      ],
      "displayName": null,
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "parentID": 0,
      "treeBaseDuration": 15,
      "type": 11,
    },
    2 => OBJECT {
      "children": ARRAY [
        3,
        4,
        5,
      ],
      "displayName": "Parent",
      "hocDisplayNames": null,
      "id": 2,
      "key": null,
      "parentID": 1,
      "treeBaseDuration": 15,
      "type": 5,
    },
    3 => OBJECT {
      "children": ARRAY [],
      "displayName": "Child",
      "hocDisplayNames": null,
      "id": 3,
      "key": "first",
      "parentID": 2,
      "treeBaseDuration": 3,
      "type": 8,
    },
    4 => OBJECT {
      "children": ARRAY [],
      "displayName": "Child",
      "hocDisplayNames": null,
      "id": 4,
      "key": "second",
      "parentID": 2,
      "treeBaseDuration": 2,
      "type": 8,
    },
    5 => OBJECT {
      "children": ARRAY [],
      "displayName": "Child",
      "hocDisplayNames": null,
      "id": 5,
      "key": "third",
      "parentID": 2,
      "treeBaseDuration": 0,
      "type": 8,
    },
  },
  "rootID": 1,
}
`;

exports[`profiling charts flamegraph chart should contain valid data: 0: FlamegraphChartData 1`] = `
OBJECT {
  "baseDuration": 15,
  "depth": 2,
  "idToDepthMap": Map {
    2 => 1,
    5 => 2,
    4 => 2,
    3 => 2,
  },
  "maxSelfDuration": 10,
  "renderPathNodes": Set {
    1,
    2,
  },
  "rows": ARRAY [
    ARRAY [
      OBJECT {
        "actualDuration": 15,
        "didRender": true,
        "id": 2,
        "label": "Parent (10ms of 15ms)",
        "name": "Parent",
        "offset": 0,
        "selfDuration": 10,
        "treeBaseDuration": 15,
      },
    ],
    ARRAY [
      OBJECT {
        "actualDuration": 0,
        "didRender": true,
        "id": 5,
        "label": "Child key=\\"third\\" (<0.1ms of <0.1ms)",
        "name": "Child",
        "offset": 15,
        "selfDuration": 0,
        "treeBaseDuration": 0,
      },
      OBJECT {
        "actualDuration": 2,
        "didRender": true,
        "id": 4,
        "label": "Child key=\\"second\\" (2ms of 2ms)",
        "name": "Child",
        "offset": 13,
        "selfDuration": 2,
        "treeBaseDuration": 2,
      },
      OBJECT {
        "actualDuration": 3,
        "didRender": true,
        "id": 3,
        "label": "Child key=\\"first\\" (3ms of 3ms)",
        "name": "Child",
        "offset": 10,
        "selfDuration": 3,
        "treeBaseDuration": 3,
      },
    ],
  ],
}
`;

exports[`profiling charts flamegraph chart should contain valid data: 1: CommitTree 1`] = `
OBJECT {
  "nodes": Map {
    1 => OBJECT {
      "children": ARRAY [
        2,
      ],
      "displayName": null,
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "parentID": 0,
      "treeBaseDuration": 15,
      "type": 11,
    },
    2 => OBJECT {
      "children": ARRAY [
        3,
        4,
        5,
      ],
      "displayName": "Parent",
      "hocDisplayNames": null,
      "id": 2,
      "key": null,
      "parentID": 1,
      "treeBaseDuration": 15,
      "type": 5,
    },
    3 => OBJECT {
      "children": ARRAY [],
      "displayName": "Child",
      "hocDisplayNames": null,
      "id": 3,
      "key": "first",
      "parentID": 2,
      "treeBaseDuration": 3,
      "type": 8,
    },
    4 => OBJECT {
      "children": ARRAY [],
      "displayName": "Child",
      "hocDisplayNames": null,
      "id": 4,
      "key": "second",
      "parentID": 2,
      "treeBaseDuration": 2,
      "type": 8,
    },
    5 => OBJECT {
      "children": ARRAY [],
      "displayName": "Child",
      "hocDisplayNames": null,
      "id": 5,
      "key": "third",
      "parentID": 2,
      "treeBaseDuration": 0,
      "type": 8,
    },
  },
  "rootID": 1,
}
`;

exports[`profiling charts flamegraph chart should contain valid data: 1: FlamegraphChartData 1`] = `
OBJECT {
  "baseDuration": 15,
  "depth": 2,
  "idToDepthMap": Map {
    2 => 1,
    5 => 2,
    4 => 2,
    3 => 2,
  },
  "maxSelfDuration": 10,
  "renderPathNodes": Set {
    1,
  },
  "rows": ARRAY [
    ARRAY [
      OBJECT {
        "actualDuration": 10,
        "didRender": true,
        "id": 2,
        "label": "Parent (10ms of 10ms)",
        "name": "Parent",
        "offset": 0,
        "selfDuration": 10,
        "treeBaseDuration": 15,
      },
    ],
    ARRAY [
      OBJECT {
        "actualDuration": 0,
        "didRender": false,
        "id": 5,
        "label": "Child key=\\"third\\"",
        "name": "Child",
        "offset": 15,
        "selfDuration": 0,
        "treeBaseDuration": 0,
      },
      OBJECT {
        "actualDuration": 0,
        "didRender": false,
        "id": 4,
        "label": "Child key=\\"second\\"",
        "name": "Child",
        "offset": 13,
        "selfDuration": 0,
        "treeBaseDuration": 2,
      },
      OBJECT {
        "actualDuration": 0,
        "didRender": false,
        "id": 3,
        "label": "Child key=\\"first\\"",
        "name": "Child",
        "offset": 10,
        "selfDuration": 0,
        "treeBaseDuration": 3,
      },
    ],
  ],
}
`;

exports[`profiling charts ranked chart should contain valid data: 0: CommitTree 1`] = `
OBJECT {
  "nodes": Map {
    1 => OBJECT {
      "children": ARRAY [
        2,
      ],
      "displayName": null,
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "parentID": 0,
      "treeBaseDuration": 15,
      "type": 11,
    },
    2 => OBJECT {
      "children": ARRAY [
        3,
        4,
        5,
      ],
      "displayName": "Parent",
      "hocDisplayNames": null,
      "id": 2,
      "key": null,
      "parentID": 1,
      "treeBaseDuration": 15,
      "type": 5,
    },
    3 => OBJECT {
      "children": ARRAY [],
      "displayName": "Child",
      "hocDisplayNames": null,
      "id": 3,
      "key": "first",
      "parentID": 2,
      "treeBaseDuration": 3,
      "type": 8,
    },
    4 => OBJECT {
      "children": ARRAY [],
      "displayName": "Child",
      "hocDisplayNames": null,
      "id": 4,
      "key": "second",
      "parentID": 2,
      "treeBaseDuration": 2,
      "type": 8,
    },
    5 => OBJECT {
      "children": ARRAY [],
      "displayName": "Child",
      "hocDisplayNames": null,
      "id": 5,
      "key": "third",
      "parentID": 2,
      "treeBaseDuration": 0,
      "type": 8,
    },
  },
  "rootID": 1,
}
`;

exports[`profiling charts ranked chart should contain valid data: 0: RankedChartData 1`] = `
OBJECT {
  "maxValue": 10,
  "nodes": ARRAY [
    OBJECT {
      "id": 2,
      "label": "Parent (10ms)",
      "name": "Parent",
      "value": 10,
    },
    OBJECT {
      "id": 3,
      "label": "Child (Memo) key=\\"first\\" (3ms)",
      "name": "Child",
      "value": 3,
    },
    OBJECT {
      "id": 4,
      "label": "Child (Memo) key=\\"second\\" (2ms)",
      "name": "Child",
      "value": 2,
    },
    OBJECT {
      "id": 5,
      "label": "Child (Memo) key=\\"third\\" (<0.1ms)",
      "name": "Child",
      "value": 0,
    },
  ],
}
`;

exports[`profiling charts ranked chart should contain valid data: 1: CommitTree 1`] = `
OBJECT {
  "nodes": Map {
    1 => OBJECT {
      "children": ARRAY [
        2,
      ],
      "displayName": null,
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "parentID": 0,
      "treeBaseDuration": 15,
      "type": 11,
    },
    2 => OBJECT {
      "children": ARRAY [
        3,
        4,
        5,
      ],
      "displayName": "Parent",
      "hocDisplayNames": null,
      "id": 2,
      "key": null,
      "parentID": 1,
      "treeBaseDuration": 15,
      "type": 5,
    },
    3 => OBJECT {
      "children": ARRAY [],
      "displayName": "Child",
      "hocDisplayNames": null,
      "id": 3,
      "key": "first",
      "parentID": 2,
      "treeBaseDuration": 3,
      "type": 8,
    },
    4 => OBJECT {
      "children": ARRAY [],
      "displayName": "Child",
      "hocDisplayNames": null,
      "id": 4,
      "key": "second",
      "parentID": 2,
      "treeBaseDuration": 2,
      "type": 8,
    },
    5 => OBJECT {
      "children": ARRAY [],
      "displayName": "Child",
      "hocDisplayNames": null,
      "id": 5,
      "key": "third",
      "parentID": 2,
      "treeBaseDuration": 0,
      "type": 8,
    },
  },
  "rootID": 1,
}
`;

exports[`profiling charts ranked chart should contain valid data: 1: RankedChartData 1`] = `
OBJECT {
  "maxValue": 10,
  "nodes": ARRAY [
    OBJECT {
      "id": 2,
      "label": "Parent (10ms)",
      "name": "Parent",
      "value": 10,
    },
  ],
}
`;
